2023-05-16
==========
    mz-16_mz-32_mc-32ex_Downloader 0.9.4.1393
    - add some path detail to exclude during processing (Voice/dv, Voice/*/1?_)
    - create Update directory if required

2023-05-14
==========
    mz-16_mz-32_mc-32ex_Downloader 0.9.4.1392
    - rename "mz-32 Downloader" to "mz-16 mz-32 mc-32ex Downloader"
    - rename directory and module name to get in sync with title

2023-05-09
==========
    FirmwareUpdater 0.9.4.1391
    - add receiver models GR-12D, Hawk 12, Hawk 18

2020-12-10
==========
    all
    - dropped support for Java 8

    mz32-Downloader-0.9.4.1360
    - German translation
    - fix bug with upper/lower case paths on Windows
    - add support for language specific manuals
    - add support for Portuguese language

2019-10-25
==========
    mz32-Downloader-0.9.4.1318
    - better handling of large downloads

2019-10-23
==========
    mz32-Downloader-0.9.4.1313
    - do not overwrite files with partial downloads

2019-04-09
==========
    VDFEditor-0.9.4.1301
    - fixed timeouts during upload of system VDFs to mz-24 PRO
    
2019-03-17
==========
    FirmwareUpdater-0.9.4.1293
    - support for ESC

2019-03-06
==========
    FirmwareUpdater-0.9.4.1288
    - support HoTT sensors and modules
    - support for ESC (work in progress)
    - add support for multicopter receivers

    mz32-Downloader-0.9.4.1288
    - remove obsolete /System/Revision_rXXXX.txt files

    VDFEditor-0.9.4.1288
    HoTT-TTS-0.9.4.1288
    - fixed VoiceRSS provider

2018-12-26
==========
    FirmwareUpgrader-0.9.4.1191
    - support for standard receivers

    VDFEditor-0.9.4.1191
    - fixed Save VDF function

2018-12-26
==========
    MdlViewer-0.9.4.1172
    - add option to show/hide suppressed menus

    MdlViewer-0.9.4.1171
    - fixed Boat, Car and Copter models for mx-12 and mx-16
    - fixed trim type for helicopter channel 1
    - fixed phase announcement for autorotation phase
    - fixed version display in PDF report