@@ -1,3 +1,8 @@
+2023-05-17
+==========
+    mz-16_mz-32_mc-32ex_Downloader 0.9.4.1394
+    - remove dv from Language.values() to hide display in selection list
+
 2023-05-16
 ==========
     mz-16_mz-32_mc-32ex_Downloader 0.9.4.1393
